--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "recharts": "^2.11.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
