--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/node": "^22.8.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.0.3",
